Fix bug where one would be able to write in entry while write-panel was collapsed. refs #72

--- a/client/scss/_columns.scss
+++ b/client/scss/_columns.scss
@@ -26,6 +26,7 @@
 // Flex Panels
 .flex-panel {
     position: absolute;
+    z-index: 1;
     left: 0;
     top: 0;
 
